public class CenterPool extends Container{
    
    public CenterPool(){
        
    }
    public void getSameColoredTiles(){};
}
