public class Disc extends Container {

    public void getSameColoredTiles(Disc disc){};
    
    public void dropTilesToCenter(Disc disc){};

    public void setDisc(){};
    
}
