public class DiscardPile extends Container{

    public void fillUpBag(){};
    
}
